--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,45 @@
   width: 410px;
   grid-template-columns: repeat(10, 40px);
   grid-template-rows: repeat(10, 40px);
+  grid-row-gap: 1px;
+  grid-column-gap: 1px;
   margin: 4rem auto;
+  border: 5px solid gray;
 }
 
 .item {
   width: 40px;
   height: 40px;
   border: 1px solid #000;
+  box-shadow: inset 1px 2px 8px #ffffff;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.item p {
+  align-items: center;
+  font-weight: bold;
+}
+
+.item-1 {
+  color: blue;
+}
+
+.item-2 {
+  color: green;
+}
+
+.item-3 {
+  color: red;
+}
+
+.item-0 {
+  color: transparent;
+}
+
+.item-M.display{
+  background: url(bomb.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
